# start_up

./: .dockerignore  .env  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.simple.yml  docker-compose.yml  nginx.conf  pyproject.toml  run-backend-only.bat  run-docker.bat  run.sh  start-dev.sh
.devcontainer/: Dockerfile  devcontainer.json
backend/: Dockerfile  Dockerfile.simple  README.md  app.py  fastapi_app.py  initialize_vector_db.py  pdf_processor.py  pdf_processor_openai.py  pdf_to_text.py  pdf_to_text_chunked.py  pdf_to_text_chunked_README.md  pyproject.toml  query_engine.py  query_engine_openai.py  requirements.txt  run-poetry.bat  run.sh  run_simple.bat  run_vector.bat  simple_app.py
backend/models/: document.py.549944ae7a86ed22d4980d7a195938f3.tmp
backend/services/: data_pipeline.py  query_processor.py  vector_store.py
backend/utils/: embeddings_generator.py  pdf_processor.py  text_chunker.py
frontend/: Dockerfile  app.py  nginx.conf  package.json  requirements.txt  run.sh  setup.sh
text_output/: 1_2020-06-18_VO_2020_852_TAXAllg_EU.txt  1_2020-06-18_VO_2020_852_TAXAllg_EU_chunk001.txt  1_2020-06-18_VO_2020_852_TAXAllg_EU_chunk002.txt  1_2020-06-18_VO_2020_852_TAXAllg_EU_chunk003.txt  1_2020-06-18_VO_2020_852_TAXAllg_EU_chunk004.txt  1_2020-06-18_VO_2020_852_TAXAllg_EU_chunk005.txt  1_2020-06-18_VO_2020_852_TAXAllg_EU_chunk006.txt  1_2020-06-18_VO_2020_852_TAXAllg_EU_chunk007.txt  1_2020-06-18_VO_2020_852_TAXAllg_EU_chunk008.txt  1_2020-06-18_VO_2020_852_TAXAllg_EU_chunk009.txt  1_2020-06-18_VO_2020_852_TAXAllg_EU_chunk010.txt  (+4011 more)
(+8 files in other folders)
