[tool.poetry]
name = "my-project"
version = "0.1.0"
description = "A Python project managed by Poetry"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,!=3.9.7,<4.0"
requests = "^2.32.3"
streamlit = "^1.44.0"
python-dotenv = "^1.1.0"
openai = "^1.68.2"
flask = "^2.3.3"
flask-cors = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
